--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,141 @@
-# Unit tests write to this directory
-testdata/out/
+# The file contains paths that should not be versioned
+#
+# Author: Hamish I A Morgan (hamish.morgan@gmail.com)
+# Version: 1.0.0
+#
 
-# Eclipse
+# ====================================================
+# Module Specific Settings
+# ====================================================
+
+# (Add project rules here)
+
+
+# ====================================================
+# Generic files to ignore
+# ====================================================
+
+*.lock
+
+## Log output
+ 
+*.log
+*.log.xml
+*.sql
+*.sqlite
+
+## Compiled binaries
+
+*.com
+*.dll
+*.exe
+*.o
+*.so
+*.so.*
+*.lib
+*.a
+*.dylib
+*.out
+*.app
+
+## Archives 
+
+# Note that it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+
+*.7z
+*.jar
+*.rar
+*.zip
+*.gz
+*.bzip
+*.bz2
+*.xz
+*.lzma
+*.iso
+*.tar
+*.dmg
+*.xpi
+*.gem
+*.egg
+*.deb
+*.rpm
+
+# ====================================================
+# Programming Languages
+# ====================================================
+
+## Java 
+
+*.class
+*.jar
+*.war
+*.ear
+
+## Python
+
+*.py[cod]
+*.egg
+*.egg-info
+pip-log.txt
+__pycache__
+
+# LaTeX
+
+*.acn
+*.acr
+*.alg
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+*.tdo
+
+# ====================================================
+# IDEs, Editors, and Build Systems
+# ====================================================
+
+## Maven
+
+/target/
+
+## Eclipse
+
 .settings
 .metadata
 Servers
 bin
 target
 
-# SpringSource Tool Suite
+## SpringSource Tool Suite
+
 .springBeans
 
+## Netbeans
 
-# Netbeans
 /build/
 /dist/
 /nbproject/
@@ -20,13 +143,22 @@ target
 nbbuild.xml
 nbactions.xml
 manifest.mf
-/libs/*.jar
-/libs/*.zip
+/libs/
+nb-configuration.xml
 
-#IntelliJ
+## IntelliJ
+
 *.iml
+*.ipr
+*.iws
+.idea/
 
-# Emacs
+## SublimeText 
+
+*.sublime-workspace
+
+## Emacs
+
 \#*\#
 /.emacs.desktop
 /.emacs.desktop.lock
@@ -34,32 +166,75 @@ manifest.mf
 auto-save-list
 tramp
 
+## Vi/m
 
-# Vim
 *.swp
 *.swo
 
+## Textmate
 
-# Textmate
+*.tmproject
 *.tmproj
 tmtags
 
+## Xcode
 
-# OS generated files
+build/*
+*.pbxuser
+*.mode2v3
+*.mode1v3
+*.perspective
+*.perspectivev3
+*~.nib
+xcuserdata
+project.xcworkspace
+
+# ====================================================
+# Operating Systems
+# ====================================================
+
+## *Nix (Linux, Unix, OS X, BSD, et al.)
+
+.*
+*~
+
+## Apple Mac OS X
+
 .DS_Store
-ehthumbs.db
+.DS_Store?
 Icon?
-Thumbs.db
 ._*
 .Spotlight-V100
 .Trashes
+
+## Microsoft Windows 
+
+ehthumbs.db
+Thumbs.db
 Desktop.ini
-.*
-!.gitignore
-*~
-*.sw[a-p]
-# KDE
+*.swp
+$RECYCLE.BIN/
+
+## KDE
+
 .directory
 
 
+# ====================================================
+# Other Version Control Systems
+# ====================================================
 
+## CVS
+
+/CVS/*
+*/CVS/*
+.cvsignore
+*/.cvsignore
+
+
+
+# ====================================================
+# Explicit includes (exceptions to previous rules)
+# ====================================================
+
+!.gitignore
